# multiAIAgentsClaude

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  FUNCTION_REFERENCE.md  PIXEL_AGENTS_QUICKREF.md  PIXEL_AGENTS_RESEARCH_INDEX.md  README.md  RESEARCH_PIXEL_AGENTS.md  USER_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  temp.txt  temp_log.txt  test_ui.mjs
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  fullstack-developer.md  git-manager.md  mcp-manager.md  planner.md  researcher.md  ui-ux-designer.md
.playwright-mcp/: page-2026-07-07T03-34-32-633Z.yml  page-2026-07-07T03-36-40-105Z.yml  page-2026-07-07T03-37-04-999Z.yml  page-2026-07-07T03-42-08-420Z.yml  page-2026-07-07T03-45-22-705Z.yml  page-2026-07-07T03-45-33-592Z.yml  page-2026-07-07T03-47-22-760Z.yml  page-2026-07-07T03-49-05-226Z.yml
agent-teams-guide/: ARCHITECTURE.md  CHANGELOG.md  CREDITS.md  FUNCTION_REFERENCE.md  README.md  USER_GUIDE.md  index.html  package-lock.json  package.json  qc_mission_flow.cjs  qc_test.mjs  vite.config.electron.mjs  vitest.config.ts
agent-teams-guide/electron/: main.cjs  preload.cjs  webview-preload.cjs
agent-teams-guide/public/: office_test.html
agent-teams-guide/scripts/: build-patch.cjs  (+1 more)
agent-teams-guide/src-tauri/: Cargo.toml  tauri.conf.json
agent-teams-guide/src-tauri/capabilities/: default.json
agent-teams-guide/src-tauri/src/: lib.rs  main.rs
docs/: manual-test-plan.md
electron/: preload.cjs  webview-preload.cjs
src/: App.jsx  index.css  main.jsx  theme.migration.test.js  theme.tokens.test.js
(+213 files in other folders)
