[package]
name = "agent-teams-guide"
version = "1.0.0"
description = "Claude Agent Teams Guide - Internal Tool"
authors = ["Internal Team"]
edition = "2021"

[lib]
name = "agent_teams_guide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
base64 = "0.22"
